# OBStimizer

./: .gitignore  RUST_OPTIMIZATION_ANALYSIS.md
.github/workflows/: build-linux-i7-1165g7.yml  build-windows-i7-9700k.yml
rust-core/: CMakeLists.txt  Cargo.toml
rust-core/build-profiles/: README.md  build-i7-1165g7-linux.sh  build-i7-9700k-windows.ps1  laptop-i7-1165g7.toml  pc-i7-9700k.toml
rust-core/obs-audio-mix/: Cargo.toml
rust-core/obs-audio-mix/src/: clamping.rs  lib.rs  mixer.rs  types.rs
rust-core/obs-compositor/: Cargo.toml
rust-core/obs-compositor/benches/: compositor_bench.rs
rust-core/obs-compositor/src/: lib.rs  render.rs  scene.rs  transform.rs  types.rs
rust-core/obs-ffi/: Cargo.toml
rust-core/obs-ffi/src/: compositor_ffi.rs  lib.rs
rust-core/obs-nvenc/: Cargo.toml
rust-core/obs-nvenc/src/: lib.rs
rust-core/obs-video/: Cargo.toml
rust-core/obs-video/src/: format_conversion.rs  frame_pool.rs  lib.rs  types.rs  video_output.rs
