[package]
name = "obs-nvenc"
version = "0.1.0"
edition = "2021"

[dependencies]
# cuda-sys = { workspace = true }  # TODO: Add when implementing
crossbeam-queue = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
libc = { workspace = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = { workspace = true }

[lib]
crate-type = ["staticlib", "rlib"]
